--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+astroid==2.2.0
 Django==1.11.5
+django-bootstrap3==11.0.0
+isort==4.3.9
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
+pylint==2.3.0
 pytz==2018.9
+six==1.12.0
+typed-ast==1.2.0
+wrapt==1.11.1
