--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,23 @@
 astroid==2.2.0
+certifi==2018.11.29
+chardet==3.0.4
+dj-database-url==0.5.0
 Django==1.11.5
 django-bootstrap3==11.0.0
+django-heroku==0.3.1
+gunicorn==19.9.0
+idna==2.8
 isort==4.3.9
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
+Pillow==5.4.1
+psycopg2==2.7.7
 pylint==2.3.0
+python-decouple==3.1
 pytz==2018.9
+requests==2.21.0
 six==1.12.0
 typed-ast==1.2.0
+urllib3==1.24.1
+whitenoise==3.3.1
 wrapt==1.11.1
