--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.2.0
 certifi==2018.11.29
 chardet==3.0.4
+config==0.4.0
 dj-database-url==0.5.0
 Django==1.11.5
 django-bootstrap3==11.0.0
@@ -19,5 +20,5 @@ requests==2.21.0
 six==1.12.0
 typed-ast==1.2.0
 urllib3==1.24.1
-whitenoise==3.3.1
+whitenoise==4.0
 wrapt==1.11.1
